# MultiHMCGibbs

./: .buildinfo  .flake8  .gitignore  README.html  README.md  basic_usage.html  build_docs.sh  genindex.html  index.html  multihmcgibbs.html  neals_funnel.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/: dependabot.yml
.github/workflows/: coverage.yml  flake8.yml  host_docs.yml
MultiHMCGibbs/: __init__.py  multihmcgibbs.py
MultiHMCGibbs/tests/: test_multihmcgibbs.py
_sources/: index.rst.txt  multihmcgibbs.rst.txt  neals_funnel.ipynb.txt
docs/source/: basic_usage.ipynb  conf.py  example_gibbs.ipynb  index.rst  modules.rst  multihmcgibbs.rst
source/: MultiHMCGibbs.rst  MultiHMCGibbs.tests.rst  modules.rst
